# ocaml-imap

./: dune-project  imap-lwt.opam  imap-unix.opam  imap.opam
examples/: dune  minimutt.ml  wait_mail.ml
lib/: fetch.ml  imap.ml  imap.mli
lwt/: imap_lwt.ml  imap_lwt.mli
unix/: imap_unix.ml
